# LuaTest

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Lua/: CMakeLists.txt
LuaSrc/: Elf.lua  Human.lua  test.lua
include/: LuaStateManager.hpp
src/: LuaStateManager.cpp
